somewhat stable java spring entity generator